--- a/xiesen-security/xiesen-security-browser/src/main/resources/resources/xiesen-login-in.html
+++ b/xiesen-security/xiesen-security-browser/src/main/resources/resources/xiesen-login-in.html
@@ -25,7 +25,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan='2'><input name="remember-me" type="checkbox" value="true" />记住我</td>
+            <td colspan='2'><input name="remember-me" type="checkbox" value="true"/>记住我</td>
         </tr>
         <tr>
             <td colspan="2">
@@ -34,5 +34,29 @@
         </tr>
     </table>
 </form>
+
+<h3>手机登录</h3>
+<form action="/authentication/mobile" method="post">
+    <table>
+        <tr>
+            <td>手机号:</td>
+            <td><input type="text" name="mobile" value="13012345678"></td>
+        </tr>
+
+        <tr>
+            <td>短信验证码</td>
+            <td>
+                <input type="text" name="smsCode">
+                <a href="/code/sms?mobile=13012345678">发送验证码</a>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <button type="submit">登录</button>
+            </td>
+        </tr>
+    </table>
+</form>
+
 </body>
 </html>
